add item requests and gateway fix